--- a/strings/langs/id.yml
+++ b/strings/langs/id.yml
@@ -218,7 +218,7 @@ queue_3 : "<u>**Trek Antrian:</u>** [Lihat Trek Antrian Lainnya Dari Sini]({0})"
 queue_4 : "⏳ Ditambahkan ke Antrian di **#{0}\n\n💡Judul:** {1}\n**⏱Durasi:** {2}\n👤**Ditambahkan Oleh:** {3}"
 
 # Semua Saluran Streaming
-stream_1 : "🏷 Title:** {0}\n⏱** Duration**: {1}\n🎧** Requested By:** {2}"
+stream_1 : "🏷 Judul:** {0}\n⏱** Durasi**: {1}\n🎧** Diminta oleh:** {2}"
 stream_2 : "📡 **Memulai Streaming melalui URL ** \n\n👤**Diminta Oleh:** {0}"
 stream_3 : "📡 **Memulai Streaming** 💡\n\n**🏷Judul:** {0}\n⌛️**Durasi**: {1}\n👤**Diminta Oleh:** {2} "
 stream_4 : "📡 **Memulai Streaming** \n\n**🏷Judul:** [{0}]({1})\n⌛️**Durasi**: {2}\n👤**Diminta Oleh:** {3}"
@@ -227,7 +227,7 @@ stream_4 : "📡 **Memulai Streaming** \n\n**🏷Judul:** [{0}]({1})\n⌛️**Du
 
 #Tombol Umum
 CLOSE_BUTTON : "🗑 Tutup"
-CLOSEMENU_BUTTON : "🗑 Tutup Menu"
+CLOSEMENU_BUTTON : "🗑 ᴄʟᴏsᴇ"
 BACK_BUTTON : "⬅ Kembali"
 UNBAN_BUTTON : "🗑 Unban Asisten"
 
@@ -266,7 +266,7 @@ P_B_4 : "🎵 Putar Daftar Putar"
 #Daftar Putar
 PL_B_1 : "🚀 Putar Daftar Putar"
 PL_B_2 : "✚ Daftar Putar"
-PL_B_3 : "• Menu"
+PL_B_3 : "• ᴍᴇɴᴜ"
 PL_B_4 : "📡 Mode Putar"
 PL_B_5 : "🔄 Hapus Seluruh Daftar Putar"
 PL_B_6 : "↗️ Hapus Daftar Putar"
