--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -219,9 +219,9 @@ queue_4 : "⏳ Added to Queue at **#{0}\n\n💡Title:** {1}\n**⏱Duration:** {2
 
 # All Streaming Lines
 stream_1 : "🏷 Title:** {0}\n⏱** Duration**: {1}\n🎧** Requested By:** {2}"
-stream_2 : "📡 **Started Streaming via URL ** 💡\n\n👤**Requested By:** {0}"
-stream_3 : "📡 **Started Streaming** 💡\n\n**🏷Title:** {0}\n⌛️**Duration**: {1}\n👤**Requested By:** {2}"
-stream_4 : "📡 **Started Streaming** 💡\n\n**🏷Title:** [{0}]({1})\n⌛️**Duration**: {2}\n👤**Requested By:** {3}"
+stream_2 : "📡 **Started Streaming via URL ** 💡\n\n🎧** Requested By:** {0}"
+stream_3 : "📡 **Started Streaming** 💡\n\n**🏷 Title:** {0}\n⏱️ **Duration**: {1}\n🎧 **Requested By:** {2}"
+stream_4 : "📡 **Started Streaming** 💡\n\n**🏷 Title:** [{0}]({1})\n⏱️ **Duration**: {2}\n🎧 **Requested By:** {3}"
 
 # Inline Buttons
 
